# orion

./: .gitattributes  ARCHITECTURE.md  CHANGELOG.md  CNAME  Cargo.toml  DOCS.md  GETTING_STARTED.md  Makefile  README.md  README.org  ROADMAP.md  Readme.asciidoc  \  ack.orc  ack.orn  benchmark.orn  benchmark.py  bool.orc  configure  fact.orc  fact.orn  foo.orn  release.sh  sloc_chart.py  test.orn
.github/workflows/: checks.yml  orion.yml  rustlang-build.yml  rustlang-test.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: CNAME  Makefile  README.md  core.md  cukta.md  main.tex  title.tex  tutorial.md
docs/builtins/: README.md  arithmetic.md  io.md  misc.md  string.md
docs/core/: README.md  bool.md  math.md
docs/std/: README.md  bool.md  io.md  list.md  math.md  maybe.md  string.md
examples/: fizzbuzz.orn  more_less.orion
lib/: Cargo.toml  bool.orc  bool.orn  io.orn  list.orn  math.orn  maybe.orn  prelude.orn  string.orn
lib/core/: bool.orn  math.orn
lib/src/: lib.rs
lib/src/interpreter/: mod.rs  value.rs
lib/src/lexer/: lexer.rs  mod.rs  tokens.rs
lib/src/parser/: mod.rs  node.rs  parser.rs
lib/std/: list.orn  maybe.orn
src/: .#interpreter.rs  arithmetic.rs  bytecode.rs  cli.rs  compiler.rs  constructors.rs  errors.rs  interpreter.rs  io.rs  lambda.rs  lexer.rs  main.rs  parser.rs  patterns.rs  string.rs  tests.rs  vm.rs
src/builtins/: arithmetic.rs  io.rs  misc.rs  mod.rs  string.rs
src/compiler/: bytecode.rs  compiler.rs  mod.rs
src/lib/: lib.rs  mod.rs  tests.rs
src/lib/interpreter/: mod.rs  value.rs
src/lib/lexer/: lexer.rs
(+33 files in other folders)
