[package]
name = "orion-lang"
version = "1.0.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
repository = "https://github.com/wafelack/orion"
readme = "https://github.com/wafelack/orion/blob/master/README.md"
description = "Orion is a high level, purely functional Lisp dialect."
documentation = "https://github.com/wafelack/orion/blob/master/DOCS.md"
license = "GPL-3.0"
keywords = ["lisp", "functional", "fp", "language"]


[[bin]]
name = "orion"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
rustyline = "7.1.0"
clap = "2.33.3"
